--- a/config/locales/eng/general.yml
+++ b/config/locales/eng/general.yml
@@ -68,17 +68,17 @@ eng:
     #>choices: 'Choix'
     close: 'Close'
     consult: 'Consult'
-    #>copy_of: 'Copie de {{source}}'
+    #>copy_of: 'Copie de %{source}'
     create: 'Create'
     delete: 'Delete'
     display: 'display'
     display_help: 'Display help'
     down: 'Down'
     duplicate: 'Duplicate'
-    #>duration: '{{hours}}h {{minutes}}min'
+    #>duration: '%{hours}h %{minutes}min'
     dyta:
     #>edit: 'Modifier'
-    #>example: 'Exemple&nbsp;: {{value}}'
+    #>example: 'Exemple&nbsp;: %{value}'
     #>export: 'Exporter'
     #>extract: 'Extraire'
     #>filter: 'Filtrer'
@@ -86,10 +86,10 @@ eng:
     format_date:
       #>iso: '(AAAA-MM-JJ)'
     #>from: 'À partir du'
-    #>hint: 'Astuce&nbsp;: {{value}}'
+    #>hint: 'Astuce&nbsp;: %{value}'
     #>import: 'Importer'
     #>indicator: 'Tableau de bord'
-    #>info: 'Information&nbsp;: {{value}}'
+    #>info: 'Information&nbsp;: %{value}'
     #>letter: 'Lettrer'
     #>letter_conclusion: ' Veuillez agréer, Chère Madame, Cher Monsieur, l''expression de mes salutations distinguées.'
     #>letter_function_title: 'Chère Madame, Cher Monsieur'
@@ -120,8 +120,8 @@ eng:
     #>total: 'Total'
     unavailable:
       #>entity: 'La fiche demandée est indisponible'
-      #>financialyear: 'L''exercice comptable est indisponible {{value}}'
-      #>journal: 'Le journal demandé est indisponible ({{value}})'
+      #>financialyear: 'L''exercice comptable est indisponible %{value}'
+      #>journal: 'Le journal demandé est indisponible (%{value})'
       #>product: 'Le produit demandé est indisponible'
     #>unlock: 'Déverrouiller'
     #>up: 'Monter'
@@ -133,9 +133,9 @@ eng:
   iso: '(YYYY-MM-DD)' #!
   models:
     account:
-      #>default_account_name: 'Compte comptable {{number}}'
+      #>default_account_name: 'Compte comptable %{number}'
       #>error_delete: 'Le compte ne peut être effacé car il contient des sous-comptes.'
-      #>label: '{{number}} - {{name}}'
+      #>label: '%{number} - %{name}'
     bank_account:
     bank_account_statement:
     bank_statement:
@@ -280,26 +280,50 @@ eng:
               name: 'Numeration of people'
         #>shelf_name: 'Sans catégorie'
         taxes:
-          vat0000:
-            amount: '0.0'
-            collected: '445710'
-            name: 'VAT 0,00%'
-            paid: '445660'
-          vat0210:
-            amount: '0.021'
-            collected: '445711'
-            name: 'VAT 2,10%'
-            paid: '445661'
-          vat0550:
-            amount: '0.055'
-            collected: '445712'
-            name: 'VAT 5,50%'
-            paid: '445662'
-          vat1960:
-            amount: '0.196'
-            collected: '445713'
-            name: 'VAT 19,60%'
-            paid: '445663'
+          tva0000:
+            #>amount: '0.0'
+            #>collected: '445710'
+            #>name: 'TVA 0,00%'
+            #>paid: '445660'
+          tva0210:
+            #>amount: '0.021'
+            #>collected: '445711'
+            #>name: 'TVA 2,10%'
+            #>paid: '445661'
+          tva0550:
+            #>amount: '0.055'
+            #>collected: '445712'
+            #>name: 'TVA 5,50%'
+            #>paid: '445662'
+          tva1960:
+            #>amount: '0.196'
+            #>collected: '445713'
+            #>name: 'TVA 19,60%'
+            #>paid: '445663'
+          vat0000:  #!
+  amount: '0.0' #!
+  collected: '445710' #!
+  name: 'VAT 0,00%' #!
+  paid: '445660' #!
+ #!
+          vat0210:  #!
+  amount: '0.021' #!
+  collected: '445711' #!
+  name: 'VAT 2,10%' #!
+  paid: '445661' #!
+ #!
+          vat0550:  #!
+  amount: '0.055' #!
+  collected: '445712' #!
+  name: 'VAT 5,50%' #!
+  paid: '445662' #!
+ #!
+          vat1960:  #!
+  amount: '0.196' #!
+  collected: '445713' #!
+  name: 'VAT 19,60%' #!
+  paid: '445663' #!
+ #!
         units:
           #>a: 'Are'
           #>ca: 'Centiare (m²)'
@@ -332,16 +356,16 @@ eng:
     delay:
       #>error_unvalid_format_for_expression: 'L''expression n''est pas au bon format'
     delivery:
-      #>label: '{{client}} à {{address}}'
+      #>label: '%{client} à %{address}'
       natures:
         #>cip: 'Livraison avec assurance'
         #>cpt: 'Livraison sans assurance'
         #>exw: 'Remise en main propre'
-      #>sale: 'Vente {{number}}'
+      #>sale: 'Vente %{number}'
     delivery_line:
-      #>sale: 'Vente {{number}}'
+      #>sale: 'Vente %{number}'
     document_template:
-      #>error_attribute: 'Le champ {{value}} est incorrect. Les possibilités sont : {{possibilities}}'
+      #>error_attribute: 'Le champ %{value} est incorrect. Les possibilités sont : %{possibilities}'
       families:
         #>accountancy: 'Comptabilité'
         #>company: 'Société'
@@ -371,10 +395,10 @@ eng:
       #>unvalid_nature: 'Votre type de modèle est incorrect. Vous devriez supprimer ce modèle et le réinstaller.'
     embankment:
       to_accountancy:
-        #>one: '[{{resource}} {{number}}] {{count}} encaissement {{mode}} {{comment}}'
-        #>other: '[{{resource}} {{number}}] {{count}} encaissements {{mode}} {{comment}}'
-        #>zero: '[{{resource}} {{number}}] Aucun encaissement {{mode}} {{comment}}'
-      #>to_accountancy_with_payment: '[{{resource}} {{number}}] {{mode}} {{check_number}} de {{payer}} ({{payment}})'
+        #>one: '[%{resource} %{number}] %{count} encaissement %{mode} %{comment}'
+        #>other: '[%{resource} %{number}] %{count} encaissements %{mode} %{comment}'
+        #>zero: '[%{resource} %{number}] Aucun encaissement %{mode} %{comment}'
+      #>to_accountancy_with_payment: '[%{resource} %{number}] %{mode} %{check_number} de %{payer} (%{payment})'
     entity:
       #>client: 'Client'
       #>supplier: 'Fournisseur'
@@ -388,16 +412,16 @@ eng:
         #>sale_order: 'Création d''un devis'
     financialyear:
       code:
-        #>double: 'EX{{first_year}}/{{second_year}}'
-        #>single: 'EX{{first_year}}'
+        #>double: 'EX%{first_year}/%{second_year}'
+        #>single: 'EX%{first_year}'
     idea:
     inventory_line:
       #>inventory: 'Inventaire '
     invoice:
       label:
-        #>credit: 'Avoir N°{{number}}'
-        #>normal: 'Facture N°{{number}}'
-      #>to_accountancy: '[{{resource}} {{number}}] {{products}} pour {{client}} ({{sale_order}})'
+        #>credit: 'Avoir N°%{number}'
+        #>normal: 'Facture N°%{number}'
+      #>to_accountancy: '[%{resource} %{number}] %{products} pour %{client} (%{sale_order})'
     invoice_line:
       #>no_product: '[Pas de produit]'
     journal:
@@ -410,7 +434,7 @@ eng:
         various: 'Various operations'
     journal_entry:
     journal_record:
-      #>record_cancel: 'Contre-passation de la pièce {{number}} : {{name}}'
+      #>record_cancel: 'Contre-passation de la pièce %{number} : %{name}'
     listing_node:
       #>add_filter: ' Ajouter un filtre '
       #>all_columns: '-- Toutes les colonnes --'
@@ -445,8 +469,8 @@ eng:
         #>nvn: 'N''est pas vide'
         #>vn: 'Est vide'
       comparison:
-        #>with_value: '{{comparator}} {{value}}'
-        #>without_value: '{{comparator}}'
+        #>with_value: '%{comparator} %{value}'
+        #>without_value: '%{comparator}'
       #>reflections: 'Tables liées'
     listing_nodes:
     observation:
@@ -455,30 +479,30 @@ eng:
         #>normal: 'Normale'
         #>notice: 'Faible'
     operation_line:
-      #>density_label: '{{value}} {{product_unit}}/{{area_unit}}'
+      #>density_label: '%{value} %{product_unit}/%{area_unit}'
       direction_label:
         #>in: 'Intrant'
         #>out: 'Sortant'
     payment_mode:
     price:
-      #>label: '{{product}} / {{amount}} {{currency}}'
+      #>label: '%{product} / %{amount} %{currency}'
       #>no_range: 'Pas d''intervalle'
-      #>range: 'De {{min}} à {{max}}'
+      #>range: 'De %{min} à %{max}'
     price_list:
     product:
       informations:
-        #>with_components: '{{product}} ({{unit}}) (produit transformé)'
-        #>without_components: '{{product}} ({{unit}}) (matière première)'
-      #>label: '{{product}} ({{unit}})'
+        #>with_components: '%{product} (%{unit}) (produit transformé)'
+        #>without_components: '%{product} (%{unit}) (matière première)'
+      #>label: '%{product} (%{unit})'
       natures:
         #>product: 'Produit'
         #>service: 'Service'
         #>subscrip: 'Abonnement'
         #>transfer: 'Transfert'
-      #>stock_move: '{{origin}} ({{code}})'
+      #>stock_move: '%{origin} (%{code})'
       subscription_label:
-        #>period: 'Abonnement {{subscription_nature}} pour {{entity}} à l''adresse {{address}} du {{start}} au {{finish}}'
-        #>quantity: 'Abonnement {{subscription_nature}} pour {{entity}} à l''adresse {{address}} du n°{{start}} au n°{{finish}}'
+        #>period: 'Abonnement %{subscription_nature} pour %{entity} à l''adresse %{address} du %{start} au %{finish}'
+        #>quantity: 'Abonnement %{subscription_nature} pour %{entity} à l''adresse %{address} du n°%{start} au n°%{finish}'
       supply_methods:
         #>buy: 'Achat'
         #>produce: 'Production'
@@ -492,47 +516,47 @@ eng:
       #>of_product: 'du produit'
     production:
     purchase_order:
-      #>label: '{{supplier}} à {{address}}'
+      #>label: '%{supplier} à %{address}'
       #>purchase: 'Achat'
-      #>to_accountancy: '[{{resource}} {{number}}] {{products}} de {{supplier}}'
+      #>to_accountancy: '[%{resource} %{number}] %{products} de %{supplier}'
     purchase_order_line:
-      #>name: '{{product}} ({{quantity}}{{unit}}) à {{amount}}{{currency}}/{{unit}}'
-      #>name_with_tracking: '{{product}}/{{tracking}} ({{quantity}}{{unit}}) à {{amount}}{{currency}}/{{unit}}'
-      #>tracking: 'N°Lot : {{serial}}'
+      #>name: '%{product} (%{quantity}%{unit}) à %{amount}%{currency}/%{unit}'
+      #>name_with_tracking: '%{product}/%{tracking} (%{quantity}%{unit}) à %{amount}%{currency}/%{unit}'
+      #>tracking: 'N°Lot : %{serial}'
     purchase_payment:
-      #>label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} pour {{payee}}'
-      #>to_accountancy: '[{{resource}} {{number}}] {{mode}} {{check_number}} pour {{payee}} ({{expenses}})'
+      #>label: '%{number}. %{amount} (%{usable_amount} restants) du %{date} par %{mode} pour %{payee}'
+      #>to_accountancy: '[%{resource} %{number}] %{mode} %{check_number} pour %{payee} (%{expenses})'
     purchase_payment_part:
-      #>to_accountancy: '[{{resource}}] {{mode}} ({{payment_number}}) reçu par {{attorney}} pour {{supplier}} ({{expense_number}})'
+      #>to_accountancy: '[%{resource}] %{mode} (%{payment_number}) reçu par %{attorney} pour %{supplier} (%{expense_number})'
     sale_order:
       label:
-        #>estimate: 'Devis N°{{number}}'
-        #>order: 'Commande N°{{number}}'
+        #>estimate: 'Devis N°%{number}'
+        #>order: 'Commande N°%{number}'
       natures:
         #>estimate: 'Devis'
         #>invoice: 'Facture'
         #>order: 'Commande'
-      #>sale: 'Vente {{number}}'
+      #>sale: 'Vente %{number}'
       sales_conditions:
-        #>downpayment: 'Un acompte de {{percent}}% (soit {{amount}}€) devra être versé à la signature du présent devis.'
-        #>validity: 'Ce devis et ses conditions générales sont valables jusqu''au {{expiration}}.'
+        #>downpayment: 'Un acompte de %{percent}% (soit %{amount}€) devra être versé à la signature du présent devis.'
+        #>validity: 'Ce devis et ses conditions générales sont valables jusqu''au %{expiration}.'
       states:
         #>A: 'En cours'
         #>C: 'Terminée'
         #>E: 'Devis'
     sale_order_line:
-      #>can_not_use_this_tracking: 'Vous ne  pouvez pas utiliser le lot {{name}}, la quantité commandée est supérieure à la quantité disponible '
+      #>can_not_use_this_tracking: 'Vous ne  pouvez pas utiliser le lot %{name}, la quantité commandée est supérieure à la quantité disponible '
       #>currency_is_not_sale_order_currency: 'Le prix du produit ne correspond pas à la monnaie définie pour la vente'
       #>error_no_found_price: 'Aucun prix n'' a pu être trouvé pour ce produit et cette liste de tarif'
-      #>location_can_not_transfer_product: 'Le produit {{product}} ne peut être sorti du réservoir {{location}}, celui-ci contient {{contained_product}} '
-      #>reduction_on: 'Remise de {{percent}}% sur : {{product}}'
-      #>tracking: 'N°Lot : {{serial}}'
+      #>location_can_not_transfer_product: 'Le produit %{product} ne peut être sorti du réservoir %{location}, celui-ci contient %{contained_product} '
+      #>reduction_on: 'Remise de %{percent}% sur : %{product}'
+      #>tracking: 'N°Lot : %{serial}'
     sale_order_nature:
     sale_payment:
-      #>label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} de {{payer}}'
-      #>to_accountancy: '[{{resource}} {{number}}] {{mode}} {{check_number}} de {{payer}} ({{expenses}})'
+      #>label: '%{number}. %{amount} (%{usable_amount} restants) du %{date} par %{mode} de %{payer}'
+      #>to_accountancy: '[%{resource} %{number}] %{mode} %{check_number} de %{payer} (%{expenses})'
     sale_payment_part:
-      #>to_accountancy: '[{{resource}}] {{mode}} ({{payment_number}}) reçu de {{attorney}} pour {{client}} ({{expense_number}})'
+      #>to_accountancy: '[%{resource}] %{mode} (%{payment_number}) reçu de %{attorney} pour %{client} (%{expense_number})'
     sequence:
       periods:
         #>cweek: 'Semaine'
@@ -541,8 +565,8 @@ eng:
         #>year: 'Année'
     stock:
       label:
-        #>with_tracking: '{{location}} : Lot {{tracking}}, {{quantity}}{{unit}} disponible(s)'
-        #>without_tracking: '{{location}} : Non tracé, {{quantity}}{{unit}} disponible(s)'
+        #>with_tracking: '%{location} : Lot %{tracking}, %{quantity}%{unit} disponible(s)'
+        #>without_tracking: '%{location} : Non tracé, %{quantity}%{unit} disponible(s)'
     stock_transfer:
       natures:
         #>transfer: 'Transfert'
@@ -571,7 +595,7 @@ eng:
         #>towed: 'Attelage'
         #>tractor: 'Tracteur'
     user:
-      #>no_right_defined_for_this_part_of_the_application: 'Aucun droit défini pour cette partie de l''application : {{controller}}/{{action}}'
+      #>no_right_defined_for_this_part_of_the_application: 'Aucun droit défini pour cette partie de l''application : %{controller}/%{action}'
       #>no_right_defined_for_this_part_of_the_application_and_this_user: 'Vous n''avez pas accès à cette partie de l''application'
   new: 'New...' #!
   next: 'Next' #!
