--- a/config/locales/eng/pack.production.yml
+++ b/config/locales/eng/pack.production.yml
@@ -17,14 +17,14 @@ eng:
         #>indicator: 'Tableau de bord'
         nb_operations:
           #>one: '1 travail à réaliser'
-          #>other: '{{count}} travaux à réaliser'
+          #>other: '%{count} travaux à réaliser'
           #>zero: 'Aucun travail à réaliser'
         #>title: 'Gestion de la production'
       operation:
         #>lines: 'Intrants et sortants'
         operation:
         #>operation_update: 'Modifier le travail'
-        #>title: 'Détails du travail {{name}}'
+        #>title: 'Détails du travail %{name}'
         #>uses: 'Matériel'
       operation_create:
         #>title: 'Créer un nouveau travail'
@@ -39,12 +39,12 @@ eng:
       operation_nature_create:
         #>title: 'Créer un nouveau type de travail'
       operation_nature_update:
-        #>title: 'Modification du type de travail : {{name}}'
+        #>title: 'Modification du type de travail : %{name}'
       operation_natures:
         #>operation_nature_create: 'Créer un nouveau type de travail'
         #>title: 'Types de travail'
       operation_update:
-        #>title: 'Modification du travail {{name}}'
+        #>title: 'Modification du travail %{name}'
       operations:
         #>operation_create: 'Créer un nouveau travail'
         #>title: 'Travaux'
@@ -61,13 +61,13 @@ eng:
         #>operations: 'Travaux'
         #>shape_update: 'Modifier l''îlot'
         #>shapes: 'Liste des îlots'
-        #>title: 'Îlot {{name}}'
+        #>title: 'Îlot %{name}'
       shape_create:
         #>title: 'Ajouter un nouvel îlot'
       _shape_form:
         #>infos: 'Renseignez les caractéristiques de l''îlot'
       shape_update:
-        #>title: 'Modification de l'' îlot : {{name}}'
+        #>title: 'Modification de l'' îlot : %{name}'
       shapes:
         #>shape_create: 'Créer un nouvel îlot'
         #>shapes: 'Îlots'
@@ -75,18 +75,18 @@ eng:
       tool:
         hour_duration:
           #>one: 'Temps d''utilisation total : 1 heure'
-          #>other: 'Temps d''utilisation total : {{count}} heures'
+          #>other: 'Temps d''utilisation total : %{count} heures'
           #>zero: ''
         operations:
           #>one: '1 travail'
-          #>other: '{{count}} travaux'
+          #>other: '%{count} travaux'
           #>zero: 'Aucun travail'
-        #>title: 'Matériel : {{name}}'
+        #>title: 'Matériel : %{name}'
         #>tool_update: 'Modifier le matériel'
       tool_create:
         #>title: 'Ajouter un matériel'
       tool_update:
-        #>title: 'Modification du matériel : {{name}}'
+        #>title: 'Modification du matériel : %{name}'
       tools:
         #>title: 'Matériel'
         #>tool_create: 'Ajouter un matériel'
