Begins to translate all versions to english in order to set eng as the default language
git-svn-id: https://www.ekylibre.org/svn/ekylibre/branches/0.2-stable@1585 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -2182,7 +2182,7 @@ eng:
         #>establishment: 'Établissement'
         #>establishment_id: 'Établissement'
         #>events: 'Évènements'
-        first_name: First name
+        first_name: 'First name'
         #>full_name: 'Nom complet'
         #>future_events: 'Evènements futurs'
         #>hashed_password: 'Mot de passe crypté'
@@ -2315,13 +2315,13 @@ eng:
           other: '{{count}} errors prohibited this {{model}} from being saved'
     models:
       account: 'Account'
-      #>account_balance: 'Balance de compte'
+      account_balance: 'Account balance'
       #>area: 'Zone postale'
       #>bank_statement: 'Relevé de compte bancaire'
-      #>cash: 'Trésorerie'
+      cash: 'Cash'
       company: 'Company'
-      #>complement: 'Champ complémentaire'
-      #>complement_choice: 'Choix de champ complémentaire'
+      complement: 'Complement field'
+      complement_choice: 'Complement field choice'
       #>complement_datum: 'Donnée complémentaire de fiche'
       #>contact: 'Contact'
       #>currency: 'Devise'
