--- a/config/locales/eng/notifications.yml
+++ b/config/locales/eng/notifications.yml
@@ -1,88 +1,88 @@
 eng:
   notifications:
-    #>access_denied: 'Vous n''avez pas le droit d''accéder à cette page. {{reason}} ({{url}})'
-    #>accountizing_is_finished: 'La bascule en comptabilité est finie.'
-    #>accountizing_works_only_with: 'La bascule en comptabilité ne peut se faire actuellement que pour : {{list}}.'
-    #>bad_file: 'Le fichier ne semble pas correspondre.'
-    #>cannot_delete_entity: 'Il n''est pas possible de supprimer cette fiche car elle possède un historique comptable'
-    #>cannot_merge_an_entity_with_itself: 'Il n''est pas possible de fusionner une fiche avec elle-même'
-    #>cannot_merge_entities: 'Une erreur est survenue. Il n''est pas possible de fusionner ces fiches.'
-    #>changes_have_been_reflected: 'Les changements ont été correctement répercutés sur l''état des stocks actuel'
-    #>changes_have_not_been_reflected: 'Les changements n''ont pas pu être correctement répercutés sur l''état des stocks actuel'
-    #>closed_financialyears: 'L''exercice a été correctement clôturé'
-    #>columns_are_already_uses: 'Une ou plusieurs colonnes à importer sont sélectionnées plusieurs fois'
+    access_denied: 'Access denied. {{reason}} ({{url}})'
+    accountizing_is_finished: 'The commercial data transfer is finished.'
+    accountizing_works_only_with: 'The transfer to accountancy can be done only for: {{list}}.'
+    bad_file: 'The file is incorrect.'
+    cannot_delete_entity: 'This person can''t be deleted because there is some accounting history.'
+    cannot_merge_an_entity_with_itself: 'It''s impossible to merge a person with itself'
+    cannot_merge_entities: 'It''s impossible to merge these people.'
+    changes_have_been_reflected: 'The changes have been reflected in the stocks state'
+    changes_have_not_been_reflected: 'The changes have not been reflected in the stocks state'
+    closed_financialyears: 'The financial year has been closed successfully'
+    columns_are_already_uses: 'One or many columns are selected many times'
     draft_entries_are_validated:
-      #>one: 'La pièce a été validée et sortie du brouillard'
-      #>other: 'Les {{count}} pièces ont été validées et sorties du brouillard'
-      #>zero: 'Aucune pièce n''a été validée'
-    #>entity_columns_are_needed: 'Vous devez spécifier au moins une colonne pour la personne et notamment son nom.'
-    #>exception_raised: 'Une erreur est survenue durant le traitement : {{message}}'
-    #>expired_session: 'Session expirée. Veuillez vous reconnecter.'
-    #>fails_to_extract_listing: 'L''extraction n''a pas pu s''effectuer : {{message}}'
-    #>import_succeeded: 'Vos données ont été correctement importées'
-    #>importation_cancelled: 'Vos données n''ont été pas été importées. L''importation a été annulée'
-    #>importation_finished: 'L''importation est terminée.'
-    #>impossible_to_add_lines: 'Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande'
-    #>impossible_to_add_lines_to_purchase: 'Vous ne pouvez plus ajouter de produits à votre achat'
-    #>invalid_file_nature: 'Type de fichier invalide'
-    #>journal_closed_on: 'Le {{journal}} a été clôturé au {{closed_on}} correctement.'
-    #>journal_record_already_validated: 'La pièce a déjà été validée et ne peut plus être modifiée'
-    #>journal_record_has_been_saved: 'La pièce N°{{number}} a été enregistrée correctement'
-    #>journal_reopened_on: 'Le {{journal}} a été déclôturé au {{closed_on}} correctement.'
-    #>mails_are_sent: 'Les courriels ont été envoyés'
-    #>need_balanced_journal_to_tax_declaration: 'Tous vos journaux doivent être clôturés et équilibrés à cette date.'
-    #>need_cash_to_record_statements: 'Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte.'
-    #>need_closed_financialyear_to_declaration: 'Vous devez avoir un exercice clôturé pour créer une déclaration de TVA.'
-    #>need_company_code_to_login: 'Vous devez sélectionner votre société pour pouvoir vous connecter avec ce nom d''utilisateur'
-    #>need_entries_to_point: 'Aucune écriture n''a été trouvé pour la période du relevé bancaire.'
-    #>need_journal_to_record_tax_declaration: 'Vous devez avoir au moins un journal des opérations diverses et un journal de vente ou d''achat pour pouvoir enregistrer des déclarations de taxes.'
-    #>need_location_to_create_purchase_order_line: 'Vous devez créer un lieu de stockage pour pouvoir réaliser un achat'
-    #>need_location_to_create_sale_order_line: 'Vous devez créer un lieu de stockage pour pouvoir réaliser une vente'
-    #>need_location_to_record_stock_moves: 'Pour pouvoir gérer vos stocks vous devez enregistrer vos lieux de stockage.'
-    #>need_payment_mode_to_create_embankment: 'Vous devez spécifier un mode de réglement pour effectuer une remise en banque'
-    #>need_quantities_to_cancel_an_invoice: 'Vous devez spécifier une quantité pour pouvoir faire un avoir'
-    #>need_stocks_location_to_create_products: 'Vous devez créer un lieu de stockage pour pouvoir créer un produit'
-    #>need_stocks_to_create_inventories: 'Vous devez gérer les stocks d''au moins un produit pour pouvoir faire un inventaire'
-    #>need_to_create_subscription_nature: 'Vous devez créer un type d''abonnement pour pouvoir gérer vos abonnements'
-    #>new_actual_number: 'Le nouveau numéro en cours est {{actual_number}}'
-    #>no_authenticated: 'Vous n''avez pas pu être identifié. Le nom d''utilisateur ou le mot de passe doit être incorrect.'
-    #>no_balance_template: 'Pas de modèle de document pour la balance'
-    #>no_closable_financialyear: 'Vous n''avez aucun exercice à clôturer.'
-    #>no_closable_journal: 'Vous ne pouvez pas clôturer ce journal.'
-    #>no_embankable_payments: 'Il n''y a pas de réglements à remettre en banque'
-    #>no_existing_mandates: 'Il n''y a pas de responsabilités enregistrées pour l''instant'
-    #>no_financialyear: 'Aucun exercice enregistré'
-    #>no_lines_found: 'Aucun pruduit n''a été ajouté à la commande '
-    #>no_location: 'Aucun lieu de stockage n''est défini. Veuillez en créer un pour pouvoir gérer vos stocks'
-    #>no_payment_to_embank: 'Aucun règlement à encaisser'
-    #>no_reopenable_journal: 'Vous ne pouvez pas déclôturer ce journal.'
-    #>no_stocks: 'Vous n''avez aucun stock. Si vous désirez gérer le stock d''un produit, veuillez cocher l''option "Gérer les stocks" dans les caractéristiques de votre produit.'
-    #>no_template_journal: 'Pas de modèle journal'
-    #>no_template_journal_by_id: 'Pas de modèle journal'
-    #>no_unvalidated_operations: 'Aucun travail à réaliser'
-    #>password_successfully_changed: 'Votre mot de passe a été mis à jour avec succès'
-    #>prices_import_succeeded: 'Vos données ont été correctement importées'
-    #>print_failure: 'Impossible d''imprimer. Essayer de recharger les modèles de documents pour corriger le problème. {{error}} ({{class}}).'
-    #>record_cannot_be_removed: 'L''enregistrement ne peut pas être supprimé'
-    #>record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement'
-    #>record_has_not_been_removed: 'L''enregistrement n''a pas être supprimé correctement'
-    #>restoration_finished: 'La restauration de la sauvegarde s''est terminée (en {{value}} secondes). Votre code société est {{code}}'
-    #>sale_order_already_invoiced: 'La vente a déjà été facturée: vous ne pouvez pas définir de livraison'
-    #>sale_order_cannot_be_updated: 'Le devis n''est plus modifiable.'
-    #>sale_order_cant_be_deleted: 'La vente ne peut plus être supprimée'
-    #>select_entries_to_letter_together: 'Sélectionnez des écritures à lettrer ensemble'
-    #>specify_filter: 'Vous choisir appliquer au moins un filtre de recherche'
-    #>specify_updates: 'Vous devez spécifier au moins un champ à modifier'
-    #>unavailable_model: '{{model}} indisponible ou inexistante ({{id}})'
-    #>unknown_action: 'La page demandée est indisponible ({{url}})'
-    #>unknown_company: 'Société inconnue'
-    #>unvalid_version_for_restore: 'La version du logiciel utilisé pour effectuer la sauvegarde ne correspond pas à la version actuelle du logiciel'
-    #>update_is_done: 'La mise à jour a été effectuée'
-    #>validates_old_inventories: 'Il est conseillé de supprimer ou de valider les inventaires non validés avant d''en faire un nouveau'
+      one: 'One record has been validated'
+      other: '{{count}} records has been validated'
+      zero: 'No records has been validated'
+    entity_columns_are_needed: 'You need to specify at least one column for the person and in particular its name.'
+    exception_raised: 'An error occurred during the processing: {{message}}'
+    expired_session: 'Session expired. Please reconnect.'
+    fails_to_extract_listing: 'The listing can''t be made: {{message}}'
+    import_succeeded: 'Your data have beeen successfully imported'
+    importation_cancelled: 'Your data was not imported. Import has been canceled'
+    importation_finished: 'The import is complete.'
+    impossible_to_add_lines: 'You can add more products to your sale, the estimate is passed in order'
+    impossible_to_add_lines_to_purchase: 'You can not add products to your purchase '
+    invalid_file_nature: 'Invalid file type'
+    journal_closed_on: 'The journal "{{journal}}" was closed on {{closed_on}}.'
+    journal_record_already_validated: 'The record has already been validated and can not be changed'
+    journal_record_has_been_saved: 'The record #{{number}} has been successfully saved'
+    journal_reopened_on: 'The journal "{{journal}}" has been re-opened on {{closed_on}}.'
+    mails_are_sent: 'The emails were sent'
+    need_balanced_journal_to_tax_declaration: 'All your journals must be closed and balanced at that date.'
+    need_cash_to_record_statements: 'You must be at least create a bank account to enter a statement.'
+    need_closed_financialyear_to_declaration: 'You must have a closed financial year to create a VAT return.'
+    need_company_code_to_login: 'You must select your company in order to connect with that username.'
+    need_entries_to_point: 'No entry was found for the period of the bank statement.'
+    need_journal_to_record_tax_declaration: 'You must have at least one journal of various operations and a journal of sales or purchases in order to save tax returns.'
+    need_location_to_create_purchase_order_line: 'You must create a warehouse to be able to create a purchase.'
+    need_location_to_create_sale_order_line: 'You must create a warehouse to be able to create a sale'
+    need_location_to_record_stock_moves: 'You must create a warehouse to be able to manage stocks.'
+    need_payment_mode_to_create_embankment: 'You must specify a mode of payment in order to make embankments'
+    need_quantities_to_cancel_an_invoice: 'You must specify a quantity in order to cancel the invoice'
+    need_stocks_location_to_create_products: 'You must create a warehouse to be able to create a product'
+    need_stocks_to_create_inventories: 'You have to manage some stocks in order to manage inventories'
+    need_to_create_subscription_nature: 'You must create a type of subscription to manage your subscriptions'
+    new_actual_number: 'The new number is being {{actual_number}}'
+    no_authenticated: 'You could not be identified. The username or password must be incorrect.'
+    no_balance_template: 'No template for the balance'
+    no_closable_financialyear: 'No closable financial year.'
+    no_closable_journal: 'No closable journal'
+    no_embankable_payments: 'There are no payment to embank'
+    no_existing_mandates: 'There are no mandates'
+    no_financialyear: 'No financial year registered'
+    no_lines_found: 'No product has been added to the order'
+    no_location: 'No warehouse is defined. Please create one in order to manage your stocks'
+    no_payment_to_embank: 'There are no payment to embank'
+    no_reopenable_journal: 'You can not re-open this journal.'
+    no_stocks: 'You have no stock. If you want to manage the stock of a product, please check the option "Manage stocks" in the characteristics of your product.'
+    no_template_journal: 'No template for the journal'
+    no_template_journal_by_id: 'No template for the journal'
+    no_unvalidated_operations: 'No task to do'
+    password_successfully_changed: 'Your password has been updated successfully'
+    prices_import_succeeded: 'Your data have been successfully imported '
+    print_failure: 'Print failure. Try to reload the templates to correct the problem. {{error}} ({{class}}).'
+    record_cannot_be_removed: 'The record can not be deleted'
+    record_has_been_correctly_removed: 'The record has been removed successfully'
+    record_has_not_been_removed: 'The record has not been removed'
+    restoration_finished: 'Restoring the backup has completed (in {{value}} seconds). Your company ID is {{code}}'
+    sale_order_already_invoiced: 'The sale has already been invoiced: you can not define delivery '
+    sale_order_cannot_be_updated: 'The estimate is no longer editable.'
+    sale_order_cant_be_deleted: 'The sale order can not be deleted.'
+    select_entries_to_letter_together: 'Select entries in order to letter them together'
+    specify_filter: 'You must choose at least one search filter'
+    specify_updates: 'You must specify at least one field to edit'
+    unavailable_model: 'Inexistent {{model}} ({{id}})'
+    unknown_action: 'The requested page is unavailable ({{url}})'
+    unknown_company: 'Unknown company'
+    unvalid_version_for_restore: 'The version of the software used to perform the backup does not match the current version of the software'
+    update_is_done: 'The update has been made'
+    validates_old_inventories: 'It is advisable to clear or validate uncommitted inventories before making a new'
     x_unpointed_journal_entries:
-      #>one: 'Il y a une écriture à pointer'
-      #>other: 'Il y a {{count}} écritures à pointer'
-      #>zero: 'Il n''y a pas d''écritures à pointer pour l''instant'
-    #>you_must_have_an_email_column: 'Vous devez avoir une colonne Email dans votre extraction'
-    #>you_must_select_a_file_to_import: 'Vous devez sélectionner un fichier à importer'
-    #>you_will_lose_all_your_current_data: 'Si vous continuez, vous allez perdre toutes vos données en cours de saisie. Voulez-vous poursuivre ?'
+      one: 'There is one entry to point'
+      other: 'There are {{count}} entries to point'
+      zero: 'There are no entries to point at the moment'
+    you_must_have_an_email_column: 'You must have an email address in your extraction'
+    you_must_select_a_file_to_import: 'You must select a file to import'
+    you_will_lose_all_your_current_data: 'If you continue, you will lose all your data being entered. Would you continue?'
