--- a/config/locales/eng/pack.company.yml
+++ b/config/locales/eng/pack.company.yml
@@ -1,21 +1,21 @@
 eng:
   controllers:
     company:
-      #>mailing: 'Mailing'
-      #>role: 'Rôle'
+      mailing: 'Mailing'
+      role: 'Rôle'
       title: 'Company'
   helpers:
     company:
   views:
     company:
       about:
-        #>title: 'À propos d''Ekylibre'
+        title: 'About Ekylibre'
       backups:
         #>backup: 'Sauvegarder'
         #>export: 'Export d''un fichier de sauvegarde'
         #>import: 'Import de fichier de sauvegarde'
         #>restore: 'Restaurer'
-        #>title: 'Sauvegardes'
+        title: 'Backups'
         #>upload: 'Sélectionner le fichier de sauvegarde à télécharger'
         #>with_prints: 'Inclure les impressions (factures, commandes...)'
       change_password:
@@ -23,42 +23,38 @@ eng:
         #>insert_password: 'Saisissez votre nouveau mot de passe'
         #>title: 'Changer de mot de passe'
       configure:
-        #>accountancy: 'Comptabilité'
+        accountancy: 'Accountancy'
         #>general: 'Paramètres généraux'
         #>management: 'Gestion commerciale'
         #>relations: 'Relations clients/fournisseurs'
         #>sequences_load: 'Charger les séquences manquantes'
         #>title: 'Configuration'
       department_create:
-        #>title: 'Ajout d''un nouveau service'
+        title: 'Add a new department'
       _department_form:
-        #>subtitle: 'Renseignez les différentes caractéristiques du service'
+        subtitle: 'General'
       department_update:
-        #>title: 'Modifier le service : {{name}}'
+        title: 'Update the department : {{name}}'
       departments:
-        #>department_create: 'Ajouter un nouveau service'
-        #>title: 'Services'
-      document_nature_create:
-      document_nature_update:
-      document_natures:
+        title: 'Departments'
       document_template_create:
-        #>title: 'Création d''un modèle de document'
+        title: 'Add a new document template'
       document_template_update:
         #>title: 'Modification du modèle de document : {{name}}'
       document_templates:
         #>document_template_create: 'Créer un modèle de document'
-        #>title: 'Modèles de document'
+        title: 'Document templates'
       document_templates_load:
         #>title: 'Charger les modèles de document par défaut'
       establishment_create:
-        #>title: 'Ajout d''un nouvel etablissement'
+        title: 'Add a new establishment'
       _establishment_form:
         #>subtitle: 'Renseignez les différentes caractéristiques de l''établissement'
       establishment_update:
         #>title: 'Modification de l''établissement : {{name}}'
       establishments:
         #>establishment_create: 'Ajouter un nouvel établissement'
-        #>title: 'Établissements'
+        title: 'Establishments'
       help:
         #>other_results: 'Autres résultats...'
         results:
@@ -66,7 +62,7 @@ eng:
           #>other: '{{count}} résultats'
           #>zero: 'Aucun résultat'
         #>search: 'Rechercher un article dans l''aide'
-        #>title: 'Aide'
+        title: 'Help'
       _help_result:
         #>pertinence: '{{value}}%'
       import:
@@ -102,7 +98,7 @@ eng:
         #>resources: 'Gestion des ressources humaines'
         #>roles: 'Rôles'
         #>sequences: 'Séquences'
-        #>title: 'Bonjour, {{user}}'
+        title: 'Hello, {{user}}'
       listing_create:
         #>title: 'Création d''une nouvelle extraction'
       _listing_form:
@@ -178,7 +174,7 @@ eng:
       user_create:
         #>title: 'Création d''un nouvel utilisateur'
       _user_form:
-        #>rights: 'Droits'
+        rights: 'Rights'
         #>subtitle: 'Renseignez les différentes caractéristiques de l''utilisateur'
         #>title: 'Gestion des employés'
       user_statistics:
@@ -196,10 +192,10 @@ eng:
         #>total_amount: ' Total montant HT '
         #>total_invoiced_amount: 'Total montant facturé '
       user_update:
-        #>title: 'Modification de l''utilisateur'
+        title: 'Update user'
       users:
-        #>title: 'Utilisateurs'
-        #>user_create: 'Ajouter un nouvel utilisateur'
+        title: 'Users'
+        user_create: 'Add a new user'
       _users_form:
       welcome:
-        #>title: 'Bienvenue dans Ekylibre, {{user}}'
+        title: 'Welcome in Ekylibre, {{user}}'
