--- a/config/locales/eng/pack.production.yml
+++ b/config/locales/eng/pack.production.yml
@@ -1,54 +1,54 @@
 eng:
   controllers:
     production:
-      #>duration: 'Durée (min.)'
-      #>mistake_on_quantities_sum: 'La somme des quantités n''est pas égale à la quantité totale produite'
-      #>moved_on: 'Fait le'
-      #>name: 'Nom'
-      #>need_location_to_create_production: 'Vous devez créer un lieu de stockage pour pouvoir enregistrer vos productions'
-      #>planned_on: 'Prévu le'
+      duration: 'Duration (min.)'
+      mistake_on_quantities_sum: ' The sum of quantifies is not matching with the total production quantity'
+      moved_on: 'Done on'
+      name: 'Name'
+      need_location_to_create_production: 'You must create a stoppage place to cave tour productions'
+      planned_on: 'Planned on'
       title: 'Production'
-      #>tools_list: 'Matériel'
+      tools_list: 'Tools'
   helpers:
     production:
   views:
     production:
       index:
-        #>indicator: 'Tableau de bord'
+        indicator: 'Indicators'
         nb_operations:
-          #>one: '1 travail à réaliser'
-          #>other: '{{count}} travaux à réaliser'
-          #>zero: 'Aucun travail à réaliser'
-        #>title: 'Gestion de la production'
+          one: '1 Operation performed'
+          other: '{{count}} Operation performed'
+          zero: 'No Operation performed'
+        title: 'Production Management'
       operation:
-        #>lines: 'Intrants et sortants'
+        lines: 'Incoming and Outgoing'
         operation:
-        #>operation_update: 'Modifier le travail'
-        #>title: 'Détails du travail {{name}}'
-        #>uses: 'Matériel'
+        operation_update: 'Update Operation'
+        title: 'Operation Details {{name}}'
+        uses: 'Tools'
       operation_create:
-        #>title: 'Créer un nouveau travail'
+        title: 'Create a new Operation'
       _operation_form:
-        #>duration: 'Durée'
-        #>in_line_create: 'Ajouter un produit intrant'
-        #>infos: 'Renseignez les caractéristiques du travail'
-        #>out_line_create: 'Ajouter un produit sortant'
-        #>products: 'Produits intrants et sortants'
-        #>tool_use_create: 'Ajouter un matériel'
-        #>tools: 'Matériel utilisé'
+        duration: 'Duration'
+        in_line_create: 'Add a new incoming product'
+        infos: 'Input Operation caracteristics'
+        out_line_create: 'Add a new outgoing product'
+        products: 'Incoming and Outgoing Products'
+        tool_use_create: 'Add a tool'
+        tools: 'Used tools'
       operation_nature_create:
-        #>title: 'Créer un nouveau type de travail'
+        title: 'Create a new type of Operation'
       operation_nature_update:
-        #>title: 'Modification du type de travail : {{name}}'
+        title: 'update Type of Operation: {{name}}'
       operation_natures:
-        #>operation_nature_create: 'Créer un nouveau type de travail'
-        #>title: 'Types de travail'
+        operation_nature_create: 'Create a new type of Operation'
+        title: 'Types of Operation'
       operation_update:
-        #>title: 'Modification du travail {{name}}'
+        title: 'Update Operation {{name}}'
       operations:
-        #>operation_create: 'Créer un nouveau travail'
-        #>title: 'Travaux'
-        #>unvalidated_operations: 'Travaux non validés'
+        operation_create: 'Create a new Operation'
+        title: 'Opetations'
+        unvalidated_operations: 'Operations not validated '
       production_create:
       _production_form:
       production_line_create:
@@ -57,46 +57,46 @@ eng:
       production_update:
       productions:
       shape:
-        #>operation_create: 'Ajouter un travail'
-        #>operations: 'Travaux'
-        #>shape_update: 'Modifier l''îlot'
-        #>shapes: 'Liste des îlots'
-        #>title: 'Îlot {{name}}'
+        operation_create: 'Add an Operation'
+        operations: 'Operations'
+        shape_update: 'Update Shape'
+        shapes: 'List of Shapes'
+        title: 'Shape {{name}}'
       shape_create:
-        #>title: 'Ajouter un nouvel îlot'
+        title: 'Add a new shape'
       _shape_form:
-        #>infos: 'Renseignez les caractéristiques de l''îlot'
+        infos: 'Informations about the Shape'
       shape_update:
-        #>title: 'Modification de l'' îlot : {{name}}'
+        title: 'Update Shape: {{name}}'
       shapes:
-        #>shape_create: 'Créer un nouvel îlot'
-        #>shapes: 'Îlots'
-        #>title: 'Îlots'
+        shape_create: 'Create a new Shape'
+        shapes: 'Shapes'
+        title: 'Shapes'
       tool:
         hour_duration:
-          #>one: 'Temps d''utilisation total : 1 heure'
-          #>other: 'Temps d''utilisation total : {{count}} heures'
-          #>zero: ''
+          one: 'Total used time: 1 hour'
+          other: 'Total used time: 1 hour: {{count}} hours'
+          zero: 'No Time used'
         operations:
-          #>one: '1 travail'
-          #>other: '{{count}} travaux'
-          #>zero: 'Aucun travail'
-        #>title: 'Matériel : {{name}}'
-        #>tool_update: 'Modifier le matériel'
+          one: '1 Operation'
+          other: '{{count}} Operations'
+          zero: 'No Operations'
+        title: 'Tool: {{name}}'
+        tool_update: 'Update tool'
       tool_create:
-        #>title: 'Ajouter un matériel'
+        title: 'Add a tool'
       tool_update:
-        #>title: 'Modification du matériel : {{name}}'
+        title: 'Update tool: {{name}}'
       tools:
-        #>title: 'Matériel'
-        #>tool_create: 'Ajouter un matériel'
+        title: 'Tools'
+        tool_create: 'Add a tool'
       unvalidated_operations:
-        #>employee_name: 'Employé'
-        #>executed: 'Éffectué'
-        #>index: 'Retour à l''index de la production'
-        #>name: 'Nom'
-        #>nature: 'Type'
-        #>planned_on: 'Prévu le'
-        #>shape_name: 'Îlot'
-        #>title: 'Travaux à réaliser'
-        #>validate: 'Valider'
+        employee_name: 'Employee'
+        executed: 'Executed'
+        index: 'Back to Production'
+        name: 'Name'
+        nature: 'Type'
+        planned_on: 'Planned on'
+        shape_name: 'Shape Name'
+        title: 'Operations to be Performed'
+        validate: 'Validate'
